[package]
name = "oval"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
csv = "1.4.0"
flate2 = "1.1.5"
futures-util = "0.3.31"
ipnet = "2.11.0"
iptrie = "0.10.3"
reqwest = { version = "0.12.24", features = ["stream"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"
tower = "0.5.2"
tracing-subscriber = "0.3.20"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
